cyclonedx-bom/tests/spec/snapshots/1.4/it_should_parse_all_of_the_valid_xml_specifications@valid-external-reference-1.4.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-external-reference-1.4.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.4" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library">
      <group>org.example</group>
      <name>mylibrary</name>
      <version>1.0.0</version>
      <externalReferences>
        <reference type="advisories">
          <url>https://example.org/security/feed/csaf</url>
          <comment>Security advisories from the vendor</comment>
        </reference>
        <reference type="bom">
          <url>https://example.org/support/sbom/portal-server/1.0.0</url>
          <comment>An external SBOM that describes what this component includes</comment>
          <hashes>
            <hash alg="SHA-256">f498a8ff2dd007e29c2074f5e4b01a9a01775c3ff3aeaf6906ea503bc5791b7b</hash>
          </hashes>
        </reference>
        <reference type="documentation">
          <url>https://example.org/support/documentation/portal-server/1.0.0</url>
          <comment>Vendor provided documentation for the product</comment>
        </reference>
      </externalReferences>
    </component>
  </components>
</bom>
