cyclonedx-bom/tests/spec/snapshots/1.4/it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-author-1.4.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-metadata-author-1.4.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.4" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <authors>
      <author>
        <name>Samantha Wright</name>
        <email>samantha.wright@example.com</email>
        <phone>800-555-1212</phone>
      </author>
    </authors>
  </metadata>
  <components />
</bom>
